--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </header>
 
             <section class="botoes-links">
-                <a href="https://nextgen-tech7.blogspot.com/" target="_blank" class="link">
+                <a href="https://diogoosz.github.io/blog-site/" target="_blank" class="link">
                     <button class="degrade">
                         <span>Aprenda sobre cripto</span>
                         <i class="bi bi-book-half"></i>
